set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")
cmake_minimum_required(VERSION 3.22)
project(stm32_linky_display)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(BUILD_OPTIONS __TIC_LIB_USE_STD_STRING__ STM32F469xx USE_STM32469I_DISCOVERY USE_STM32469I_DISCO_REVB USE_HAL_DRIVER)

set(BUILD_OPTIONS ${BUILD_OPTIONS} __UNIT_TEST__)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")

set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")

file(GLOB_RECURSE FORCED_INCLUDES
  "${PROJECT_SOURCE_DIR}/ticdecodecpp/include/*.h"
)

list(TRANSFORM FORCED_INCLUDES PREPEND "-include ")

string (REPLACE ";" " " COMPILER_FORCED_INCLUDES_OPT "${FORCED_INCLUDES}")

add_definitions("${COMPILER_FORCED_INCLUDES_OPT}")

add_subdirectory(src)
add_subdirectory(test)
